--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,17 +22,28 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material
-      - run: pip install mkdocs-redirects
-      - run: pip install beautifulsoup4
-      - run: pip install lxml
+         
+      - name: Install dependencies
+        run: |   
+          pip install mkdocs-material
+          pip install mkdocs-redirects
+          pip install beautifulsoup4
+          pip install lxml
+
+      - name: Get mkdocs-material version
+        run: |
+          MKDOCS_MATERIAL_VERSION=$(pip show mkdocs-material | grep Version | cut -d ' ' -f 2)
+          echo "MKDOCS_MATERIAL_VERSION=$MKDOCS_MATERIAL_VERSION" >> $GITHUB_ENV
+
       - name: Build the MkDocs site
         run: |
           mkdocs build
             # Custom step to modify HTML files
+
       - name: Duplicate the generated site dir with postprocessing
         run: |
           python ./scripts/duplicate_site_with_postprocess.py ./site ../site_postprocessed
+
       - name: Deploy to GitHub Pages
         run: |
           # Initialize gh-pages branch if it doesn't exist
@@ -49,5 +60,5 @@ jobs:
 
           # Commit and push the changes
           git add .
-          git commit -m "Automated deployment with custom HTML edits" # TODO: Anyway to retain nad insert the original commit hash that trigger this CI?
+          git commit -m "Deployed ${GITHUB_SHA} with mkdocs-material v${{ env.MKDOCS_MATERIAL_VERSION }} and HTML post-processing"
           git push origin gh-pages --force
