--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,6 +90,8 @@ nav:
       - 🔖 SSD + Docker: tips_ssd-docker.md
       - 🔖 Memory optimization: tips_ram-optimization.md
       - 🏆 Hackathon Guide: hackathon.md
+    - AI Microservices:
+      - Microservices Intro : tutorials/microservices_intro.md
     - Text (LLM):
       - text-generation-webui: tutorial_text-generation.md
       - Ollama: tutorial_ollama.md
