--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ plugins:
         'tutorial_nanoowl.md': 'vit/tutorial_nanoowl.md'
         'tutorial_sam.md': 'vit/tutorial_sam.md'
         'tutorial_tam.md': 'vit/tutorial_tam.md'
+        'tutorial_benchmarking.md': 'tutorial_Performance-Testing.md'
 
 use_directory_urls: false
 
