--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,7 +108,7 @@ nav:
       - NanoVLM: tutorial_nano-vlm.md
       - Llama 3.2 Vision: llama_vlm.md
       - Agent Studio: agent_studio.md
-    - Gen AI Benchmarking: tutorial_gen-ai-benchmarking.md
+    - Gen AI Benchmarking 🆕: tutorial_gen-ai-benchmarking.md
     - Vision Transformers (ViT):
       - vit/index.md
       - EfficientViT: vit/tutorial_efficientvit.md
