General enhancements: Windows setup and internal staging
- Add Windows-friendly MkDocs setup instructions in README.md
- Update .gitlab-ci.yml for internal GitLab Pages deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 image: python:latest
+
 pages:
   stage: deploy
   only:
-    - master 
+    - master
     - main
   script:
     - pip install mkdocs-material
+    - pip install mkdocs-redirects
     - mkdocs build --site-dir public
   artifacts:
     paths:
