feat: Enable Mermaid diagram support with rehype-mermaid
- Add rehype-mermaid plugin for server-side Mermaid rendering
- Install playwright for headless browser rendering at build time
- Configure astro.config.mjs to exclude Mermaid from syntax highlighting
- Add Playwright install step to GitHub Actions workflow
- Restore Mermaid diagrams in initial-setup-jetson-orin-nano tutorial

Leverages Astro 5.5's improved support for diagramming tools.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "playwright": "^1.57.0",
+    "rehype-mermaid": "^3.0.0"
   },
   "keywords": [
     "jetson",
