--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,11 @@ jobs:
         run: npm ci
         working-directory: ${{ env.BUILD_PATH }}
 
+      # Install Playwright browsers for Mermaid diagram rendering
+      - name: Install Playwright browsers
+        run: npx playwright install chromium --with-deps
+        working-directory: ${{ env.BUILD_PATH }}
+
       # Display Astro version for debugging
       - name: Get Astro version
         run: npx astro --version
