feat: Add copy-to-clipboard button to code blocks with Expressive Code
- Install astro-expressive-code for enhanced code block features
- Replace Shiki with Expressive Code integration
- Add automatic copy button to all code blocks
- Configure github-dark theme to match existing design
- Maintain existing styling with rounded corners

Improves developer experience with one-click code copying.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.0",
     "astro": "^5.11.1",
+    "astro-expressive-code": "^0.41.5",
     "chart.js": "^4.4.4",
     "tailwindcss": "^3.4.0"
   },
