--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^6.0.0",
     "astro": "^5.11.1",
     "chart.js": "^4.4.4",
+    "rehype-mermaid": "^3.0.0",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
